RESOLVED FIXED101509
[Chromium] DumpRenderTree fix for canvas in software compositing
https://bugs.webkit.org/show_bug.cgi?id=101509
Summary [Chromium] DumpRenderTree fix for canvas in software compositing
Slavomir Kaslev
Reported 2012-11-07 14:06:03 PST
[Chromium] DumpRenderTree fix for canvas in software compositing
Attachments
Patch (1.62 KB, patch)
2012-11-07 14:07 PST, Slavomir Kaslev
no flags
Patch (2.77 KB, patch)
2012-11-07 17:00 PST, Slavomir Kaslev
no flags
Slavomir Kaslev
Comment 1 2012-11-07 14:07:49 PST
Kenneth Russell
Comment 2 2012-11-07 14:09:12 PST
Comment on attachment 172868 [details] Patch Looks fine, though I wonder whether we'll run into similar problems with other features like hardware accelerated video. r=me
Slavomir Kaslev
Comment 3 2012-11-07 15:21:28 PST
Video layout tests pass now (minus filtering diff between Mesa and Skia which will be "fixed" when I do a layout test results rebase) so I didn't do anything about them. After the virtual/softwarecompositing layout tests rebase, I'll keep an eye if something like that breaks them.
WebKit Review Bot
Comment 4 2012-11-07 16:24:17 PST
Comment on attachment 172868 [details] Patch Rejecting attachment 172868 [details] from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 2 Last 500 characters of output: ion-size.html [ Failure Pass ] Unexpected flakiness: image-only failures (1) fast/text/international/hindi-spacing.html [ ImageOnlyFailure Pass ] Unexpected flakiness: timeouts (1) fast/loader/text-document-wrapping.html [ Timeout Pass ] Unexpected flakiness: text-only failures (1) fast/loader/javascript-url-in-object.html [ Failure Pass ] Regressions: Unexpected text-only failures (1) platform/chromium/virtual/softwarecompositing/layer-creation/spanOverlapsCanvas.html [ Failure ] Full output: http://queues.webkit.org/results/14759513
Slavomir Kaslev
Comment 5 2012-11-07 17:00:51 PST
WebKit Review Bot
Comment 6 2012-11-08 13:30:51 PST
Comment on attachment 172893 [details] Patch Rejecting attachment 172893 [details] from commit-queue. skaslev@chromium.org does not have committer permissions according to http://trac.webkit.org/browser/trunk/Tools/Scripts/webkitpy/common/config/committers.py. - If you do not have committer rights please read http://webkit.org/coding/contributing.html for instructions on how to use bugzilla flags. - If you have committer rights please correct the error in Tools/Scripts/webkitpy/common/config/committers.py by adding yourself to the file (no review needed). The commit-queue restarts itself every 2 hours. After restart the commit-queue will correctly respect your committer rights.
Adrienne Walker
Comment 7 2012-11-08 13:32:26 PST
Should this be addressed at a much lower level, such as just turning this setting off when software compositing is enabled?
Adrienne Walker
Comment 8 2012-11-08 13:33:43 PST
Comment on attachment 172893 [details] Patch Actually, I guess there is no lower level. Sounds good. R=me.
WebKit Review Bot
Comment 9 2012-11-08 13:40:25 PST
Comment on attachment 172893 [details] Patch Clearing flags on attachment: 172893 Committed r133941: <http://trac.webkit.org/changeset/133941>
WebKit Review Bot
Comment 10 2012-11-08 13:40:28 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.