[Chromium] DumpRenderTree fix for canvas in software compositing https://bugs.webkit.org/show_bug.cgi?id=101509

Patch by Slavomir Kaslev <skaslev@google.com> on 2012-11-08
Reviewed by Adrienne Walker.

Don't use accelerated canvas 2d when in software compositing mode.

* DumpRenderTree/chromium/TestShell.cpp:
(TestShell::runFileTest):

Canonical link: https://commits.webkit.org/119735@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@133941 268f45cc-cd09-0410-ab3c-d52691b4dbfc